--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "counter": "^0.1.1",
     "ejs": "^2.5.7",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "mongoose": "^4.12.0"
   }
 }
